--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.3.7",
     "browser-sync": "^2.27.6",
     "cssnano": "^5.0.8",
